<resources>

    //Navigation Bar
    <string name="app_name">StudyKuy</string>
    <string name="title_home">Home</string>
    <string name="title_schedule">Schedule</string>
    <string name="title_scan">Scan</string>
    <string name="title_wallet">Wallet</string>
    <string name="title_profile">Profile</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="scan_me">Scan Me :)</string>
    <string name="hallo_di_wallet_fragment">Hallo di Wallet Fragment</string>
    <string name="hallo_di_dashboard_fragment">Hallo di Dashboard Fragment</string>
    <string name="hallo_di_profile_fragment">Hallo di Profile Fragment</string>
    <string name="hallo_di_home_fragment">Hallo di Home Fragment</string>
    <string name="sd">SD</string>
    <string name="smp">SMP</string>
    <string name="sma">SMA</string>
    <string name="coming_soon">Coming Soon</string>
    <string name="naufal">naufal</string>
    <string name="senin_30_september_2020">Senin, 30 September 2020</string>
    <string name="gazebo_perpustakaan_ub">Gazebo Perpustakaan UB</string>

</resources>
