<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="@dimen/activity_vertical_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_sd"
            android:layout_width="@dimen/button_size"
            android:layout_height="@dimen/button_size"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/sd"/>

        <Button
            android:id="@+id/btn_smp"
            android:layout_width="@dimen/button_size"
            android:layout_height="@dimen/button_size"
            android:layout_marginRight="@dimen/button_gap"
            android:layout_marginLeft="@dimen/button_gap"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/smp"/>

        <Button
            android:id="@+id/btn_sma"
            android:layout_width="@dimen/button_size"
            android:layout_height="@dimen/button_size"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/sma"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="fitXY"
            android:src="@drawable/maintenance_96px"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="30sp"
            android:text="@string/coming_soon"/>
    </LinearLayout>





</LinearLayout>